force-app/src/objects/PagesApi__Site__c.object
<CustomObject>
    <description>Sites are a collection of Pages published and hosted natively on the Force.com platform.</description>
    <fields>
        <fullName>CPBase__Authorization_Required_Description__c</fullName>
        <description>Description for the authorization required page of the site</description>
        <inlineHelpText>Description for the authorization required page of the site</inlineHelpText>
        <label>Authorization Required Description</label>
        <length>2048</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPBase__Authorization_Required_Title__c</fullName>
        <description>Title for the authorization required page of the site</description>
        <inlineHelpText>Title for the authorization required page of the site</inlineHelpText>
        <label>Authorization Required Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPBase__Default_Event_Listing_Style__c</fullName>
        <description>Dictates which event listing style is presented by default within the Events page.</description>
        <inlineHelpText>Dictates which event listing style is presented by default within the Events page.</inlineHelpText>
        <label>Default Event Listing Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tile</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Tile</label>
                </value>
                <value>
                    <fullName>List</fullName>
                    <color>#78C953</color>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                    <color>#E27001</color>
                    <label>Calendar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPBase__Event_Search_Filters_CSV__c</fullName>
        <description>This field references the event field set that defines the attributes that a user can use to filter search results.</description>
        <inlineHelpText>This field references the event field set that defines the attributes that a user can use to filter search results.</inlineHelpText>
        <label>Event Search Filters CSV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPBase__Generic_Error_Description__c</fullName>
        <description>Description for the generic error page of the site</description>
        <inlineHelpText>Description for the generic error page of the site</inlineHelpText>
        <label>Generic Error Description</label>
        <length>2048</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPBase__Generic_Error_Title__c</fullName>
        <description>Title for the generic error page of the site</description>
        <inlineHelpText>Title for the generic error page of the site</inlineHelpText>
        <label>Generic Error Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPBase__Limit_Exceeded_Description__c</fullName>
        <description>Description for the limit exceeded page of the site.</description>
        <inlineHelpText>Description for the limit exceeded page of the site.</inlineHelpText>
        <label>Limit Exceeded Description</label>
        <length>2048</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPBase__Limit_Exceeded_Title__c</fullName>
        <description>Title for the limit exceeded page of the site.</description>
        <inlineHelpText>Title for the limit exceeded page of the site</inlineHelpText>
        <label>Limit Exceeded Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPBase__Maintenance_Description__c</fullName>
        <description>Description for the maintainence page of the site</description>
        <inlineHelpText>Description for the maintainence page of the site</inlineHelpText>
        <label>Maintenance Description</label>
        <length>2048</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPBase__Maintenance_Title__c</fullName>
        <description>Title for the maintainence page of the site</description>
        <inlineHelpText>Title for the maintainence page of the site</inlineHelpText>
        <label>Maintenance Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPBase__Page_Not_Found_Description__c</fullName>
        <description>Description for the page not found page of the site</description>
        <inlineHelpText>Description for the page not found page of the site</inlineHelpText>
        <label>Page Not Found Description</label>
        <length>2048</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPBase__Page_Not_Found_Title__c</fullName>
        <description>Title for the page not found page of the site</description>
        <inlineHelpText>Title for the page not found page of the site</inlineHelpText>
        <label>Page Not Found Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPBase__Profile_Contact_Fieldset_CSV__c</fullName>
        <inlineHelpText>Comma separated field set names that will be displayed on the profile page.</inlineHelpText>
        <label>Profile Contact Fieldset(s) CSV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPBase__Service_Not_Available_Description__c</fullName>
        <description>Description for the Service Not Available page of the site</description>
        <inlineHelpText>Description for the Service Not Available page of the site</inlineHelpText>
        <label>Service Not Available Description</label>
        <length>2048</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPBase__Service_Not_Available_title__c</fullName>
        <description>Title for the Service Not Available page of the site</description>
        <inlineHelpText>Title for the Service Not Available page of the site</inlineHelpText>
        <label>Service Not Available title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPBase__User_Info_Contact_Field_Set__c</fullName>
        <inlineHelpText>A single field set that will show information about a User in the system.</inlineHelpText>
        <label>User Info Contact Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneClick__Is_Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked access to the Site is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Site and related content.</description>
        <inlineHelpText>When checked access to the Site is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Site and related content.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_eStore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** Checked when the Site is linked to a Store.</description>
        <inlineHelpText>** System Calculated ** Checked when the Site is linked to a Store.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Related Store.</description>
        <inlineHelpText>Link to the Related Store.</inlineHelpText>
        <label>Store</label>
        <referenceTo>OrderApi__Store__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Auth_Provider_Default_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default account to use for Auth Provider</description>
        <inlineHelpText>The default account to use for Auth Provider</inlineHelpText>
        <label>Auth Provider Default Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Base_Title_Tag__c</fullName>
        <description>** System Calculated Required Override ** The Base Title Tag is used as a prefix or suffix to all child Page &quot;Title Tags&quot;. For example : &quot;My Custom Page &lt; My Base Title Tag&quot;. Defaults to the name of the Site.</description>
        <inlineHelpText>** System Calculated Required Override ** The Base Title Tag is used as a prefix or suffix to all child Page &quot;Title Tags&quot;. For example : &quot;My Custom Page &lt; My Base Title Tag&quot;. Defaults to the name of the Site.</inlineHelpText>
        <label>Base Title Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Community_Network_ID__c</fullName>
        <inlineHelpText>Community Network Id that uniquely identifies Community</inlineHelpText>
        <label>Community Network ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Community_Network_Name__c</fullName>
        <inlineHelpText>Community Network Name that uniquely identifies Community</inlineHelpText>
        <label>Community Network Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Cookie_Decline_Redirect_URL__c</fullName>
        <description>Required if Enable Cookie Prompt is checked. Field contains the URL to redirect to if the prompt is not accepted. This is conditionally required.</description>
        <inlineHelpText>Required if Enable Cookie Prompt is checked. Field contains the URL to redirect to if the prompt is not accepted. This is conditionally required.</inlineHelpText>
        <label>Cookie Decline Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__Create_Account_Override_URL__c</fullName>
        <description>Providing a URL will hide the &quot;Create a user account&quot; checkbox on the authentication page and display the provided URL link in its place.</description>
        <inlineHelpText>Providing a URL will hide the &quot;Create a user account&quot; checkbox on the authentication page and display the provided URL link in its place.</inlineHelpText>
        <label>Create Account Override URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Default_Community_New_User_Profile__c</fullName>
        <inlineHelpText>Default Community New User Profile</inlineHelpText>
        <label>Default Community New User Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Description__c</fullName>
        <description>Optional description of the Site.</description>
        <inlineHelpText>Optional description of the Site.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Enable_Cookie_Prompt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Site will display a prompt asking the user to accept the use of cookies. If not accepted, the user will be redirected to an external site.</description>
        <inlineHelpText>When checked, the Site will display a prompt asking the user to accept the use of cookies. If not accepted, the user will be redirected to an external site.</inlineHelpText>
        <label>Enable Cookie Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Enable_SEF_URLs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for Future Use</description>
        <inlineHelpText>Reserved for Future Use</inlineHelpText>
        <label>Reserved for Future Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Google_Login_URL__c</fullName>
        <description>Login URL from Auth Provider in Setup</description>
        <inlineHelpText>Login URL from Auth Provider in Setup</inlineHelpText>
        <label>Google Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Search_Default_Sort_Field__c</fullName>
        <defaultValue>&quot;NAME&quot;</defaultValue>
        <description>** Defaults Group Name ** Combined with the Search Results Sort Order, this field defines the field to sort group search results in ascending or descending order. Limited to Group Fields Only.</description>
        <inlineHelpText>** Defaults Group Name ** Combined with the Search Results Sort Order, this field defines the field to sort group search results in ascending or descending order. Limited to Group Fields Only.</inlineHelpText>
        <label>Group Search Default Sort Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Search_Filters_CSV__c</fullName>
        <description>This field references the field set that defines the attributes that a user can use to filter search results.</description>
        <inlineHelpText>This field references the field set that defines the attributes that a user can use to filter search results.</inlineHelpText>
        <label>Group Search Filters (CSV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Search_Page_Results__c</fullName>
        <defaultValue>10</defaultValue>
        <description>** Default 10 ** The value in this field defines the maximum number of results that will be returned for search results on the Groups page.</description>
        <inlineHelpText>** Default 10 ** The value in this field defines the maximum number of results that will be returned for search results on the Groups page.</inlineHelpText>
        <label>Group Search Page Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Search_Result_Display_Fields_CSV__c</fullName>
        <description>Defines the fields to be displayed on the group tiles in the Groups page using comma separated values of field API names. Limited to Community Group fields only.</description>
        <inlineHelpText>Defines the fields to be displayed on the group tiles in the Groups page using comma separated values of field API names. Limited to Community Group fields only.</inlineHelpText>
        <label>Group Search Result Display Fields (CSV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Group_Search_Results_Sort_Order__c</fullName>
        <description>** Defaults Ascending ** Combined with the Search Results Sort Field, this field defines the order in which the search results will be displayed.</description>
        <inlineHelpText>** Defaults Ascending ** Combined with the Search Results Sort Field, this field defines the order in which the search results will be displayed.</inlineHelpText>
        <label>Group Search Results Sort Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The default site for a given community. Only one site can be default for a community.</description>
        <inlineHelpText>The default site for a given community. Only one site can be default for a community.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Site will be published and made available to the appropriate audience. Defaults unchecked.</description>
        <inlineHelpText>When checked, the Site will be published and made available to the appropriate audience. Defaults unchecked.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__LinkedIn_Login_URL__c</fullName>
        <description>Login URL from Auth Provider in Setup</description>
        <inlineHelpText>Login URL from Auth Provider in Setup</inlineHelpText>
        <label>LinkedIn Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__Login_Override_URL__c</fullName>
        <description>Portal users will be redirected to the provided URL when the &quot;Login&quot; button is clicked on the authentication page.</description>
        <inlineHelpText>Portal users will be redirected to the provided URL when the &quot;Login&quot; button is clicked on the authentication page.</inlineHelpText>
        <label>Login Override URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Login_Redirect_URL__c</fullName>
        <inlineHelpText>Relative URL to be redirected on successful login</inlineHelpText>
        <label>Login Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Menu to use for the Site&apos;s &quot;Primary&quot; Navigation.</description>
        <inlineHelpText>Link to the Menu to use for the Site&apos;s &quot;Primary&quot; Navigation.</inlineHelpText>
        <label>Nav Menu</label>
        <referenceTo>PagesApi__Menu__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__No_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__No_Follow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Follow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__No_Index__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Profile_Page_URL__c</fullName>
        <inlineHelpText>The URL for the profile page.</inlineHelpText>
        <label>Profile Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__SEF_Slug__c</fullName>
        <description>Reserved for Future Use</description>
        <inlineHelpText>Reserved for Future Use</inlineHelpText>
        <label>Reserved for Future Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Show_Group_Search_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**  Default Unchecked ** This field enables or disables the filters in the Groups page.</description>
        <inlineHelpText>**  Default Unchecked ** This field enables or disables the filters in the Groups page.</inlineHelpText>
        <label>Show Group Search Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Site_Template_Key__c</fullName>
        <description>The name of the template to use for creating standard pages and menus related to the site.</description>
        <inlineHelpText>The name of the template to use for creating standard pages and menus related to the site.</inlineHelpText>
        <label>Site Template Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Site_URL__c</fullName>
        <description>The base URL for the Site.</description>
        <inlineHelpText>The base URL for the Site.</inlineHelpText>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** The Theme to use for the branding and style of pages contained in the Site.</description>
        <inlineHelpText>** Required ** The Theme to use for the branding and style of pages contained in the Site.</inlineHelpText>
        <label>Theme</label>
        <referenceTo>PagesApi__Theme__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Title_Tag_Separator__c</fullName>
        <description>Optional character to use to separate the Base Title Tag from the Page Title Tag. In the example below the &quot;&lt;&quot; character is used as the Title Tag Separator. Defaults to &quot;|&quot;

&quot;My Custom Page Title Tag &lt; My Base Title Tag&quot;</description>
        <inlineHelpText>Optional character to use to separate the Base Title Tag from the Page Title Tag. In the example below the &quot;&lt;&quot; character is used as the Title Tag Separator. Defaults to &quot;|&quot;

&quot;My Custom Page Title Tag &lt; My Base Title Tag&quot;</inlineHelpText>
        <label>Title Tag Separator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Twitter_Login_URL__c</fullName>
        <description>Login URL from Auth Provider in Setup</description>
        <inlineHelpText>Login URL from Auth Provider in Setup</inlineHelpText>
        <label>Twitter Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__User_Login_URL__c</fullName>
        <description>The URL for the login page.</description>
        <inlineHelpText>The URL for the login page.</inlineHelpText>
        <label>User Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__User_Reset_Password_URL__c</fullName>
        <description>The URL for the reset password page.</description>
        <inlineHelpText>The URL for the reset password page.</inlineHelpText>
        <label>User Reset Password URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__User_Self_Registration_URL__c</fullName>
        <description>The URL for the self registration page.</description>
        <inlineHelpText>The URL for the self registration page.</inlineHelpText>
        <label>User Self Registration URL</label>
        <type>Url</type>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>PagesApi__All</fullName>
        <columns>NAME</columns>
        <columns>PagesApi__Theme__c</columns>
        <columns>PagesApi__Is_Default__c</columns>
        <columns>PagesApi__Is_Published__c</columns>
        <columns>PagesApi__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>